draft.css
/* ... */
/* container */

header {
	display: flex;
	/* align-content: center; */
	justify-content: space-between;
	/* justify-content: stretch; */
	flex-wrap: wrap;
	z-index: 10;
	top: 0px;
	/* align-items: stretch; */
	align-items: center;
	padding: 0 var(--mainpaddng);
	margin: 0 calc(var(--mainpaddng) * -1);
}

main::after,
main::before {
	content: '';
	display: block;
	clear: both;
}

footer {
	/* max-width: 950px; */
	margin: calc(var(--mainpaddng) * 3) calc(var(--mainpaddng) * -1) calc(var(--mainpaddng) * -1);
	padding: calc(var(--mainpaddng) * 3) 0;
	position: relative;
	text-align: center;
	background: var(--low);
	/* position: relative; */
}

nav ul,
nav li {
	margin: 0;
	padding: 0;
	list-style: none;
	position: relative;
}

nav a {
	display: block;
	border-left: 2px solid transparent;
	color: var(--textContrast);
	box-shadow: 3px 0 0 0 rgba(0, 0, 0, 0) inset;
	padding: var(--mainpaddng);
	margin: 0 calc(var(--mainpaddng) * -1);
	transition: background-color 0.2s ease, color 0.2s ease, border-color 0.2s ease;
	/* font-weight: bold; */
	position: relative;
	height: 100%;
	display: flex;
	align-items: center;
}

nav a:hover {
	text-decoration: none;
	background: var(--fillhover);
	border-left: 2px solid var(--brand);
}

nav ul li ul {
	padding-left: calc(var(--mainpaddng) * 1.5);
	font-size: 14px;
	position: relative;
}
nav ul li ul li ul {
	padding-left: calc(var(--mainpaddng) * 1);
	font-size: 14px;
	position: relative;
}

nav ul li ul::after {
	content: '';
	position: absolute;
	left: calc(var(--mainpaddng) / 2);
	top: 0;
	bottom: calc(var(--mainpaddng) * 1.5 - 2px);
	border-left: 2px solid var(--hight);
	z-index: 1;
}
nav ul li ul li ul::after {
	left: 0;
	top: calc(var(--mainpaddng) * -1);
}

nav ul li ul li {
	padding-left: calc(var(--mainpaddng) / 4);
}

nav ul li ul a {
	/* font-weight: normal; */
	border-top: none;
	padding: calc(var(--mainpaddng) / 2) calc(var(--mainpaddng) * 2);
}

nav ul li ul li a,
nav ul li ul li a:hover {
	border-left: none;
	background: none;
}

nav ul li ul li a::after {
	content: '';
	position: absolute;
	left: -1px;
	top: 50%;
	margin-top: -1px;
	border-bottom: 2px solid var(--hight);
	width: var(--mainpaddng);
	z-index: 2;
}
nav ul li ul li a::before {
	content: '';
	position: absolute;
	left: var(--mainpaddng);
	top: 50%;
	margin: -6px 0 0 -5px;
	width: 12px;
	height: 12px;
	background: var(--low);
	border: 2px solid var(--hight);
	border-radius: 50%;
	z-index: 3;
}

/* nav ul li ul li a:hover::after {
	border-bottom: 2px solid var(--brand);
} */
nav ul li ul li a:hover::before {
	background: var(--brand);
	border: 2px solid var(--hight);
}

header div {
	display: flex;
	align-self: stretch;
}

header nav,
header nav > ul {
	padding: 0;
	display: flex;
	align-self: stretch;
	align-items: stretch;
	/* justify-content: center; */

	justify-content: space-evenly;
	flex: 1;

	flex-direction: row;
	background: none;
	margin-bottom: 0;
}
header nav > a,
header nav > ul > li > a {
	margin: 0;
	border-left: none;
	border-bottom: 2px solid transparent;
	height: 100%;
	display: flex;
	justify-content: center;
}

nav a + a,
nav li + li a {
	border-top: 2px solid var(--fillhover);
}
header nav a + a,
header nav li + li a {
	border-top: none;
}

header nav ul li ul {
	padding: 0;
	border-radius: var(--radius);
	opacity: 0;
	visibility: hidden;
	position: absolute;
	top: calc(100% + var(--mainpaddng) / 2);
	left: 50%;
	transform: translateX(-50%);
	background: var(--low);
	width: 220px;
	max-width: none;
	box-shadow: 0px 5px 30px -15px rgba(0, 0, 0, 0.35);
}
header nav ul li:hover > ul {
	visibility: visible;
	opacity: 1;
}

header nav ul li > ul::before {
	content: '';
	/* height: ; */
	border-bottom: calc(var(--mainpaddng) * 2) solid transparent;
	/* border-left: calc(var(--mainpaddng) * 2) solid transparent; */
	width: 100%;
	position: absolute;
	left: 0;
	bottom: 100%;
}
header nav ul li > ul::after {
	border: calc(var(--mainpaddng) / 2) solid transparent;
	border-bottom-color: var(--low);
	position: absolute;
	left: 0;
	right: 0;
	top: auto;
	bottom: 100%;
	margin: auto;
	width: 0;
}

header nav ul li > ul > li > a {
	padding: var(--mainpaddng);
	margin: 0;
}
header nav ul li > ul > li > a::after,
header nav ul li > ul > li > a::before {
	display: none;
}

header nav > a:hover,
header nav > ul > li:hover > a {
	margin: 0;
	border-left: none;
	border-bottom: 2px solid var(--brand);
}

nav,
aside {
	background: var(--low);
	padding: var(--mainpaddng);
	border-radius: var(--radius);
	margin: 0 0 var(--mainpaddng) 0;
}

nav details {
	margin: var(--mainpaddng) calc(var(--mainpaddng) * -1);
}
nav details details {
	margin-left: 0;
}

label {
	display: block;
}
a,
a:active,
button,
select,
button:active,
input,
input:active,
textarea,
details,
summary,
th,
td {
	outline: none;
	box-shadow: none;
	transition: background-color 0.2s ease, box-shadow 0.2s ease, transform 0.2s ease;
}

h1,
h2,
h3 {
	margin: calc(var(--mainpaddng) * 3) 0 calc(var(--mainpaddng) * 2);
}
h4,
h5,
h6 {
	margin: calc(var(--mainpaddng) * 2) 0 var(--mainpaddng);
}
h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child,
h6:first-child {
	margin-top: calc(var(--mainpaddng) * 2);
}
h1,
h2,
h3,
h4,
h5,
h6,
strong {
	color: var(--textContrast);
	font-weight: 600;
}

h1 {
	font-size: 3.6rem;
}

h2 {
	font-size: 2.8rem;
}
h3 {
	font-size: 2.5rem;
}
h4 {
	font-size: 2.5rem;
	font-weight: normal;
}
h5 {
	font-size: 2rem;
}
h6 {
	font-size: 1.8rem;
}

button,
[role='button'],
[type='range'],
[type='color'],
[type='submit'],
[type='file'],
[type='reset'],
[type='button'],
[type='checkbox'],
[type='radio'] {
	cursor: pointer;
	display: inline-block;
}
a[role='button'] > strong,
button > strong {
	font-size: 1.4em;
	padding: 0px calc(var(--mainpaddng));
	color: var(--buttontext);
	display: block;
}

output {
	display: inline-block;
	padding: 0 var(--mainpaddng);
}
/* ... */

